add jetty-maven-plugin to pom.xml